Fix overflow hidden and max height

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,6 @@ html {
   text-size-adjust: 100%;
 
   font-family: "PT Sans", sans-serif;
-  overflow: hidden;
 }
 
 *, *::before, *::after {
@@ -23,12 +22,13 @@ html {
 .img-flex {
   display: block;
   width: 100%;
-  max-height: 25em;
 }
 
 .banner {
   position: relative;
   text-align: center;
+  max-height: 24em;
+  overflow: hidden;
 }
 
 .banner-content {
